--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
-name: Dom's Homepage
+title: Dom's Webzone
+description: Leave a comment on this webzone if you want a pizza roll.
+logo: ./img/dom.jpg
 theme: jekyll-theme-minimal
