Try to setup docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,5 @@ services:
   site:
     build: .
     ports: ["4000:4000"]
-    volumes: ["./docs:/docs"]
-    # command: tail -f /dev/null
+    volumes: [".:/docs"]
+    command: tail -f /dev/null
