--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
+repository: dominickp/dominick.p.elu.so
 title: Dom's Webzone
 description: Leave a comment on this webzone if you want a pizza roll.
 logo: ./img/dom.jpg
 theme: jekyll-theme-minimal
+github: [metadata]
