Add favicon and disable github metadata

--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ title: Dom's Webzone
 description: Leave a comment on this webzone if you want a pizza roll.
 logo: ./img/dom.jpg
 theme: jekyll-theme-minimal
-github: [metadata]
+# github: [metadata]
