--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
     build: .
     ports: ["4000:4000"]
     volumes: [".:/docs"]
-    command: tail -f /dev/null
+    # command: tail -f /dev/null
